trunk/tests/jastadd/negative/type_errors/L1/2_ConstDecl.ob
MODULE TestModule;
	CONST C1 = 10 DIV 0;
		C2 = C1 + 10;
END TestModule.
